style.css
/* ... */
.footer .current-song-avatar img {
    width: 60px;
    height: 60px;
    border-radius: 10px;
}
.footer .current-song {
    display: flex;
    margin-left: 16px;
    align-items: center;
    justify-content: space-between;
    gap: 12px;
}
.current-song-info p {
    margin: 0;
}
.current-song-info .song-name {
    color: white;
    font-size: 14px;
    font-weight: 500;
}
.current-song-info .singer {
    color: #ACACAC;
    font-size: 14px;
}
.current-song .plus-icon {
    color: #ACACAC;
}
.footer .audio-play {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}
.audio-play .audio-controller .button-control {
    font-size: 24px;
    color: rgb(149, 145, 145);
    text-align: center;
    margin-bottom: 10px;
}
.audio-play .audio-controller .button-control i {
    margin-inline: 8px;
}
.audio-play .audio-controller .button-control .pause {
    padding: 5px 9px;
    background-color: white;
    border-radius: 50%;
    color: black;
}
.shuffle, .repeat {
    font-size: 16px;
    color: #B3B3B3 !important;
    transition: transform .5s;
}
.audio-play .audio-controller .audio-time {
    color: #B3B3B3;
    display: flex;
    align-items: center;
    gap: 4px;
}
.audio-play .audio-controller .audio-line {
    content: "";
    width: 514px;
    height: 4px;
    background-color: #4D4D4D;
    border-radius: 4px;
    display: inline-block;
    position: relative;
}
.audio-play .audio-controller .audio-line .audio-line-child {
    content: "";
    width: 30%;
    height: 4px;
    background-color: white;
    border-radius: 4px;
    display: inline-block;
    position: absolute;
}
.footer .audio-settings {
    margin-right: 8px;
    color: #b3b3b3;
    display: flex;
    align-items: center;
    gap: 8px;
}
.footer .audio-settings .volume-line {
    content: "";
    width: 93px;
    height: 4px;
    background-color: white;
    border-radius: 4px;
    display: inline-block;
}

/* hover */
.hover-scale {
    cursor: pointer;
    transition: transform .5s;
}
.hover-white {
    cursor: pointer;
}
.hover-scale:hover {
    transform: scale(1.1);
}
.hover-white:hover {
    color: white;
}
.music-avatar {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
}
.music-item {
    padding: 10px 10px;
}
.music-item:hover {
    border-radius: 10px;
    cursor: pointer;
    background-color: #1F1F1F;
}
.music-item:hover .control-play {
    color: white;
}
.control-play {
    color: transparent;
    position: absolute;
    font-size: 24px;
    display: block;
}
.hover-circle {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    background-color: #121212;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #ACACAC;
}
.hover-circle:hover {
    cursor: pointer;
    background-color: #282828;
    color: white;
}
.song-name:hover {
    cursor: pointer;
    text-decoration: underline;
    font-weight: 600;
}
.singer:hover {
    color: white;
    text-decoration: underline;
}
.hover-grey:hover {
    cursor: pointer;
    background-color: #444444;
}
.content {
    position: fixed;
    top: 64px;
    left: calc(25% + 10px);
    width: calc(47%);
    height: 78%;
    /* background-color: red; */
    background-image: linear-gradient(180deg, #006000 2%, #121212 40%);
    border-radius: 10px;
}
.content::-webkit-scrollbar {
    display: none;
}
.content:hover {
    overflow-y: auto;
}
.content li {
    list-style: none;
}
/* 25% + 55%  */


.category-buttons {
    padding: 20px 30px;
    position: fixed;
}
.category-buttons button {
    padding: 8px 6px;
    background-color: rgba(0, 30, 0,0.5);
    border-radius: 20px;
    color: white;
    border: 1px solid transparent;
    font-weight: 600;
}
.category-buttons button:hover {
    cursor: pointer;
    background-color: white;
    color: black;
}
.category-buttons button.active {
    background-color: white;
    color: black;
}
.albums {
    margin-top: 80px;
    margin-left: 30px;
}
.album-item img {
    width: 50px;
    height: 50px;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}
.album-list {
    max-height: 240px;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    margin: 0;
    padding: 0;
}
.album-item {
    margin-bottom: 8px;
    margin-right: 10px;
    height: 52px;
    color: white;
    display: flex;  
    align-items: center;
    gap: 8px;
    background-color: #3A372E;
    border-radius: 5px;
}
.box-play {
    width: 36px;
    height: 36px;
    border-radius: 50%;
    background-color: transparent;
    display: flex;
    align-items: center;
    justify-content: center;
    color: transparent;
    margin-left: auto;
    margin-right: 8px;
}
.album-item:hover {
    cursor: pointer;
    background-color: #414449;
}
.album-item:hover .box-play {
    background-color: #18D962;
    color: black;
}
.for-you {
    margin-left: 30px;
}
.for-you h2 {
    color: white;
}
.row-list {
    padding: 0;
    margin: 0;
    display: flex;
    gap: 20px;
    overflow-x: auto;
}
.row-list::-webkit-scrollbar {
    display: none;
}
.my-list-item img {
    width: 150px;
    height: 150px;
    border-radius: 10px;
}
.my-list-item p {
        margin-top: 4px;
        margin-bottom: 3px;
    color: #949494;
}
.my-list-item {
    border-radius: 10px;
    padding: 10px 8px;
    position: relative;
}
.my-list-item:hover {
    cursor: pointer;
    background-color: #1E1E1E;
}
.my-list-item:hover .box-play2 {
    background-color: #18D962;
    color: black;
}
.box-play2 {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    background-color: transparent;
    display: flex;
    align-items: center;
    justify-content: center;
    color: transparent;
    position: absolute;
    top: 50%;
    right: 10px;
}
/* ... */

